@@ -19,33 +19,27 @@ import java.lang.annotation.Target;
 import org.junit.jupiter.api.extension.ExtendWith;
 
 /**
- * {@code @SetSystemProperty} is a JUnit Jupiter extension to set the value of a
- * system property for a test execution.
+ * {@code @SetEnvironmentVariable} is a JUnit Jupiter extension to set the value of a
+ * environment variable for a test execution.
  *
- * <p>The key and value of the system property to be set must be specified via
+ * <p>The key and value of the environment variable to be set must be specified via
  * {@link #key()} and {@link #value()}. After the annotated method has been
  * executed, the initial default value is restored.
  *
- * <p>{@code SetSystemProperty} is repeatable and can be used on the method and on
- * the class level. If a class is annotated, the configured property will be set
+ * <p>{@code SetEnvironmentVariable} is repeatable and can be used on the method and on
+ * the class level. If a class is annotated, the configured variable will be set
  * for all tests inside that class. Any method level configurations will
  * override the class level configurations.
  *
- * <p>WARNING: Java considers environment variables to be immutable, so this extension
- * uses reflection to change them. This requires that the {@link SecurityManager}
- * allows modifications and can potentially break on different operating systems and
- * Java versions. Be aware that this is a fragile solution and consider finding a
- * better one for your specific situation. If you're running on Java 9 or later, you
- * may have to add {@code --add-opens=java.base/java.util=ALL-UNNAMED} to your test
- * execution to prevent warnings or even errors.
+ * <p>Warning: If your {@link SecurityManager} does not allow modifications, it fails.
  *
  * @since 0.6
  */
 @Retention(RetentionPolicy.RUNTIME)
 @Target({ ElementType.METHOD, ElementType.TYPE })
-@Repeatable(SetSystemProperties.class)
-@ExtendWith(SystemPropertyExtension.class)
-public @interface SetSystemProperty {
+@Repeatable(SetEnvironmentVariables.class)
+@ExtendWith(EnvironmentVariableExtension.class)
+public @interface SetEnvironmentVariable {
 
 	/**
 	 * The key of the system property to be set.
